--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 Django==2.2.4
+django-countries==5.3.3
 django-crispy-forms==1.7.2
 Faker==1.0.7
+Pillow==6.1.0
 psycopg2==2.8.3
 python-dateutil==2.8.0
 pytz==2019.1
