--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-Django==2.2.4
-django-countries==5.3.3
-django-crispy-forms==1.7.2
-Faker==1.0.7
-Pillow==6.1.0
-psycopg2==2.8.3
-python-dateutil==2.8.0
-pytz==2019.1
-six==1.12.0
-sqlparse==0.3.0
-text-unidecode==1.2
+Django==3.0.8
+django-countries==6.1.2
+django-crispy-forms==1.9.1
+Faker==4.1.1
+Pillow==7.2.0
+psycopg2-binary==2.8.5
+python-dateutil==2.8.1
+pytz==2020.1
+six==1.15.0
+sqlparse==0.3.1
+text-unidecode==1.3
